update modules, implement user and authentication
