# src/dtos/users.dto.ts
@@ -1,0 +1,20 @@
+import { IsString, IsEmail, IsNotEmpty, MinLength, MaxLength } from 'class-validator';
+
+export class CreateUserDto {
+  @IsEmail()
+  public email: string;
+
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(5)
+  @MaxLength(32)
+  public password: string;
+}
+
+export class UpdateUserDto {
+  @IsString()
+  @IsNotEmpty()
+  @MinLength(5)
+  @MaxLength(32)
+  public password: string;
+}
