# swagger.yaml
@@ -103,6 +103,207 @@ paths:
         500:
           description: 'Server Error'
 
+# [GET] posts
+  /posts:
+    get:
+      tags:
+      - posts
+      summary: Find All Posts
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+# [POST] posts
+    post:
+      tags:
+      - posts
+      summary: Add Post
+      parameters:
+      - name: body
+        in: body
+        description: Post Data
+        required: true
+        schema:
+          $ref: '#/definitions/posts'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [GET] posts/id
+  /posts/{id}:
+    get:
+      tags:
+      - posts
+      summary: Find Post By Id
+      parameters:
+      - name: id
+        in: path
+        description: Post Id
+        required: true
+        type: integer
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [PUT] posts/id
+    put:
+      tags:
+      - posts
+      summary: Update Post By Id
+      parameters:
+      - name: id
+        in: path
+        description: Post Id
+        required: true
+        type: integer
+      - name: body
+        in: body
+        description: Post Data
+        required: true
+        schema:
+          $ref: '#/definitions/posts'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [DELETE] posts/id
+    delete:
+      tags:
+      - posts
+      summary: Delete Post By Id
+      parameters:
+      - name: id
+        in: path
+        description: Post Id
+        required: true
+        type: integer
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+
+# [GET] users
+  /users:
+    get:
+      tags:
+      - users
+      summary: Find All Users
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+# [POST] users
+    post:
+      tags:
+      - users
+      summary: Add User
+      parameters:
+      - name: body
+        in: body
+        description: user Data
+        required: true
+        schema:
+          $ref: '#/definitions/users'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [GET] users/id
+  /users/{id}:
+    get:
+      tags:
+      - users
+      summary: Find User By Id
+      parameters:
+      - name: id
+        in: path
+        description: User Id
+        required: true
+        type: integer
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [PUT] users/id
+    put:
+      tags:
+      - users
+      summary: Update User By Id
+      parameters:
+      - name: id
+        in: path
+        description: user Id
+        required: true
+        type: integer
+      - name: body
+        in: body
+        description: user Data
+        required: true
+        schema:
+          $ref: '#/definitions/users'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+# [DELETE] users/id
+    delete:
+      tags:
+      - users
+      summary: Delete User By Id
+      parameters:
+      - name: id
+        in: path
+        description: user Id
+        required: true
+        type: integer
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # definitions
 definitions:
   categories:
@@ -113,6 +314,35 @@ definitions:
       name:
         type: string
         description: Category Name
+
+  posts:
+    type: object
+    required:
+        - title
+        - content
+    properties:
+      title:
+        type: string
+        description: Post title
+      description:
+        type: string
+        description: Post description
+      content:
+        type: string
+        description: Post content
+
+  users:
+    type: object
+    required:
+        - email
+        - password
+    properties:
+      email:
+        type: string
+        description: user Email
+      password:
+        type: string
+        description: user Password
 
 schemes:
  - https
